--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<h1>Please Sign Up</h1>
+<%= form_with model: @user, local: true do |f| %>
+    <%=f.label :first_name %>
+    <%=f.text_field :first_name, placeholder: 'Joe' %>
+    <%=f.label :last_name %>
+    <%=f.text_field :last_name, placeholder: 'Mama' %>
+    <%= f.label :email %>
+    <%= f.email_field :email, placeholder: 'whois@joe.com' %>
+    <%= f.label :password %>
+    <%= f.password_field :password, placeholder: 'joeMAMA' %>
+    <%=f.label :password_confirmation %>
+    <%=f.password_field :password_confirmation, placeholder: 'joeMAMA' %>
+    <%= f.submit 'Sign Up' %>
+<% end %>
